<?xml version="1.0" encoding="UTF-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlacesFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/mperu"
            android:scaleType="centerCrop"
            android:src="@drawable/marca_peru"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="174dp" />

        <TextView
            android:id="@+id/text_arte_culinario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/arte"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/image_platos"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="35dp"
            android:text="@string/line1"
            android:justificationMode="inter_word"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textSize="18sp"
            tools:targetApi="o" />



        <ImageView
            android:id="@+id/image_peru"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/platos"
            android:paddingTop="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cuatro_platos"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="174dp" />


    </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        android:layout_width="80dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/button_next"
        android:textColor="#424242"
        app:cornerRadius="100dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>
</FrameLayout>